--- a/PSS/PSS/Views/PurchaseOrders/Create.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Create.cshtml
@@ -13,47 +13,48 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>@Html.DisplayNameForModel()</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    <h4>@Html.DisplayNameForModel()</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="panel panel-default">
-            <div class="panel-heading">@Html.DisplayNameFor(model => model.Items)</div>
-            <div class="panel-body">
-                <table class="table">
-                    @foreach (var item in Global.Cart.Items)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Product.Description)
-                            </td>
+    <div class="panel panel-default">
+        <div class="panel-heading">@Html.DisplayNameFor(model => model.Items)</div>
+        <div class="panel-body">
+            <table class="table">
+                @foreach (var item in Global.Cart.Items)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Product.Description)
+                        </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Quantity)
-                            </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Quantity)
+                        </td>
 
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Price)
-                            </td>
-                        </tr>
-                    }
-                </table>
-            </div>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Price)
+                        </td>
+                    </tr>
+                }
+            </table>
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => Global.Cart.TotalValue, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.TotalPrice)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => Global.Cart.TotalValue)
+        </dd>
+    </dl>
 
         <div>
             <input type="submit" value="@View.Create" class="btn btn-default" />
         </div>
-    </div>
+</div>
 }
 
 <br />
