--- a/PSS/PSS/Views/PurchaseOrders/Create.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Create.cshtml
@@ -63,10 +63,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Freight.FreightTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Freight.FreightType, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("FreightTypeId", null, htmlAttributes: new { @class = "form-control" })                       
-                        @Html.ValidationMessageFor(model => model.Freight.FreightTypeId, "", new { @class = "text-danger" })
+                        @Html.EnumDropDownListFor(model => model.Freight.FreightType, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Freight.FreightType, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
