--- a/PSS/PSS/Views/Users/Delete.cshtml
+++ b/PSS/PSS/Views/Users/Delete.cshtml
@@ -65,7 +65,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Gender.Description)
+            @Html.DisplayFor(model => model.Gender)
         </dd>
 
         <dt>
