--- a/PSS/PSS/Views/Users/Details.cshtml
+++ b/PSS/PSS/Views/Users/Details.cshtml
@@ -64,7 +64,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Gender.Description)
+            @Html.DisplayFor(model => model.Gender)
         </dd>
 
         <dt>
