--- a/PSS/PSS/Views/Users/Edit.cshtml
+++ b/PSS/PSS/Views/Users/Edit.cshtml
@@ -91,10 +91,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.GenderId, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("GenderId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.GenderId, "", new { @class = "text-danger" })
+                    @Html.EnumDropDownListFor(model => model.Gender, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
