--- a/PSS/PSS/Views/Shared/Error.cshtml
+++ b/PSS/PSS/Views/Shared/Error.cshtml
@@ -1,13 +1,16 @@
-﻿<!DOCTYPE html>
+﻿@using PSS.Utils
+@using PSS.Utils.Constants
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>@View.Error</title>
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h1>@View.Error</h1>
+        <h2>@Global.Error.ToString()</h2>
     </hgroup>
 </body>
 </html>
