--- a/PSS/PSS/Views/States/Delete.cshtml
+++ b/PSS/PSS/Views/States/Delete.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Country.Name)
+            @Html.DisplayNameFor(model => model.Country)
         </dt>
 
         <dd>
