--- a/PSS/PSS/Views/States/Details.cshtml
+++ b/PSS/PSS/Views/States/Details.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Country.Name)
+            @Html.DisplayNameFor(model => model.Country)
         </dt>
 
         <dd>
