--- a/PSS/PSS/Views/PurchaseOrders/Index.cshtml
+++ b/PSS/PSS/Views/PurchaseOrders/Index.cshtml
@@ -40,9 +40,9 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
+                @Html.ActionLink(View.Cancel, "Cancel", new { id = item.Id }) |
                 @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
-                @Html.ActionLink(View.Delete, "Delete", new { id = item.Id })
+                @Html.ActionLink(View.Return, "Return", new { id = item.Id })
             </td>
         </tr>
     }
