--- a/PSS/PSS/Views/Shared/_Layout.cshtml
+++ b/PSS/PSS/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PSS.Utils
+@using PSS.Utils.Constants
 
 <!DOCTYPE html>
 <html>
@@ -24,44 +25,49 @@
             <div class="navbar-collapse collapse">
                 @if (Global.User != null)
                 {
-                <ul id="Links" class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pessoas</span> <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Usuários", "Index", "Users")</li>
-                            <li>@Html.ActionLink("Fornecedores", "Index", "Providers")</li>
-                            <li>@Html.ActionLink("Fabricantes", "Index", "Manufacturers")</li>
-                        </ul>
-                    </li>
+                    <ul id="Links" class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pessoas</span> <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Usuários", "Index", "Users")</li>
+                                <li>@Html.ActionLink("Fornecedores", "Index", "Providers")</li>
+                                <li>@Html.ActionLink("Fabricantes", "Index", "Manufacturers")</li>
+                            </ul>
+                        </li>
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Produtos</span> <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Categorias", "Index", "Categories")</li>
-                            <li>@Html.ActionLink("Unidades", "Index", "Units")</li>
-                            <li>@Html.ActionLink("Produtos", "Index", "Products")</li>
-                        </ul>
-                    </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Produtos</span> <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Categorias", "Index", "Categories")</li>
+                                <li>@Html.ActionLink("Unidades", "Index", "Units")</li>
+                                <li>@Html.ActionLink("Produtos", "Index", "Products")</li>
+                            </ul>
+                        </li>
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Localização</span> <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Cidades", "Index", "Cities")</li>
-                            <li>@Html.ActionLink("Estados", "Index", "States")</li>
-                            <li>@Html.ActionLink("Países", "Index", "Countries")</li>
-                        </ul>
-                    </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Localização</span> <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Cidades", "Index", "Cities")</li>
+                                <li>@Html.ActionLink("Estados", "Index", "States")</li>
+                                <li>@Html.ActionLink("Países", "Index", "Countries")</li>
+                            </ul>
+                        </li>
 
-                    <li>@Html.ActionLink("Carrinho de compras", "Index", "Cart")</li>
-                    <li>@Html.ActionLink("Pedidos", "Index", "Orders")</li>
-                </ul>
+                        <li>@Html.ActionLink("Carrinho de compras", "Index", "Cart")</li>
+                        <li>@Html.ActionLink("Pedidos", "Index", "Orders")</li>
+                    </ul>
                 }
 
-                <div class="pull-right">
-                    <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Sair", "Logoff", "Users")</li>
-                    </ul>
-                </div>
+                @if (Global.User != null)
+                {
+                    <div class="pull-right">
+                        <ul class="nav navbar-nav">
+                            <li>@Html.ActionLink(Global.User.Email, "Details/" + Global.User.Id, "Users")</li>
+                            <li>@Html.ActionLink("Sair", "Logoff", "Users")</li>
+                        </ul>
+                    </div>
+                }
+
             </div>
         </div>
     </div>
