--- a/PSS/PSS/Views/Users/Index.cshtml
+++ b/PSS/PSS/Views/Users/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<PSS.Models.User>
 @using PSS.Utils.Constants
+@using PSS.Utils
 
 @{
     ViewBag.Title = View.Index;
@@ -34,32 +35,45 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Birth)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City.Name)
-        </td>
-        <td>
-            @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
-            @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
-            @Html.ActionLink(View.Delete, "Delete", new { id = item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Birth)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City.Name)
+            </td>
+
+            @if (item.Id == Global.User.Id)
+            {
+                <td>
+                    @Html.ActionLink(View.Edit, "Edit", new { id = item.Id }) |
+                    @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
+                    @Html.ActionLink(View.Delete, "Delete", new { id = item.Id })
+                </td>
+            }
+            else
+            {
+                <td>
+                    <text>@View.Edit</text> |
+                    @Html.ActionLink(View.Details, "Details", new { id = item.Id }) |
+                    <text>@View.Delete</text>
+                </td>
+            }
+        </tr>
+    }
 
 </table>
